# nexus-gateway

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  angular.json  federation.config.js  nginx.conf  package.json
.github/workflows/: ci.yml  publish.yml
docker-entrypoint.d/: 40-runtime-config.sh  50-ws-reload.sh
public/assets/: config.template.json
public/assets/registry-backup/: remotes.json
src/: bootstrap.ts  headers.rs  health.rs  http_client.rs  index.html  main.rs  main.ts  metrics.rs  protection.rs  proxy.rs  registry_listener.rs  route_table.rs  spa.rs  startup.rs  state.rs  styles.scss  ws_proxy.rs
src/app/: app.component.ts  app.config.ts
src/app/interceptors/: correlation-id.interceptor.ts  nexus-auth.interceptor.ts
src/app/services/: host-loader.service.ts
src/environments/: environment.prod.ts  environment.ts
src/tests/: headers_tests.rs  health_tests.rs  protection_tests.rs  route_table_tests.rs  spa_tests.rs  startup_tests.rs
static/: index.html  not-ready.html
