[package]
name = "nexus-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "nexus-gateway"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "http2", "tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "compression-full", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
ulid = "1"
dashmap = "5"
bytes = "1"
http-body-util = "0.1"
futures-util = "0.3"
rand = "0.8"
url = "2"
anyhow = "1"
parking_lot = "0.12"
dotenvy = "0.15"
prometheus = { version = "0.13", default-features = false }
once_cell = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.6"
